fix mobile overflow

--- a/scss/end.scss
+++ b/scss/end.scss
@@ -17,7 +17,7 @@ $duration:10s;
     left: 10500px;
     height:100vh;
     width:100vw;
-    overflow: hidden;
+    overflow: scroll;
     .scroll{
         background-image: url('../images/scroll.png');
         background-size: 100% 100%;
