--- a/scss/index.scss
+++ b/scss/index.scss
@@ -19,7 +19,7 @@ body {
     min-height:100vh;
 }
 .swipeArea{
-    display: none;
+    visibility: hidden;
     z-index: 99;
     height: 100vh;
     width: 20vw;
