--- a/scss/mediaQ.scss
+++ b/scss/mediaQ.scss
@@ -18,7 +18,7 @@
         display: none;
     }
     .swipeArea{
-        display: block  ;
+        visibility: visible;
     }
 }
 
